[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twscrape"
version = "0.18.0"
authors = [{ name = "vladkens", email = "v.pronsky@gmail.com" }]
description = "Twitter GraphQL and Search API implementation with SNScrape data models"
readme = "readme.md"
requires-python = ">=3.13"
keywords = ["twitter", "scrape", "scrapper", "api", "snscrape"]
license = { text = "MIT" }
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.4.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.6",
]

[project.urls]
repository = "https://github.com/Telesphoreo/twscrape"

[project.scripts]
twscrape = "twscrape.cli:run"

[tool.setuptools]
packages = ['twscrape']

[tool.hatch.build.targets.wheel]
packages = ["twscrape"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
ignore = ["E501"]
